[tool.poetry]
name = "pygame-demo"
version = "0.1.0"
description = ""
authors = ["Tuneer Roy <53184517+tuneerroy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
